Develop/K3s/manifests/frontend/frontend-deploy.yaml
# ==========================================
# 1. 프론트엔드 배포 (10.3.4.10 노드)
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agami-frontend
  namespace: agami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agami-frontend
  template:
    metadata:
      labels:
        app: agami-frontend
    spec:
      nodeSelector:
        zone: frontend
      containers:
      - name: frontend
        image: agami-captcha.cloud:8443/agami/frontend:20260521-154240
          # Build Trigger ID: 26207345014
          # Build Trigger ID: 26205516328
          # Build Trigger ID: 26202446963
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: agami-frontend-svc
  namespace: agami
spec:
  selector:
    app: agami-frontend
  ports:
    - port: 80
      targetPort: 80
---
# ==========================================
# 2. 통합 인그레스 (Ingress)
# ==========================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agami-ingress
  namespace: agami
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - agami-captcha.cloud
    secretName: agami-web-tls
  rules:
  - host: agami-captcha.cloud
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: agami-backend-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agami-frontend-svc
            port:
              number: 80
